2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsdaemonutils.c: (gvfs_file_info_populate_default),
	(gvfs_file_info_populate_names),
	(gvfs_file_info_populate_content_types):
	* daemon/gvfsdaemonutils.h:
	add functions that are supposed to set default values on a remote file
	info structure, so we don't duplicate the code across multiple
	backends.

	* daemon/gvfsbackendftp.c: (ftp_error_set_from_response),
	(ftp_connection_new), (file_info_get_flags), (file_info_query):
	use it.

2008-02-28  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvolumemonitor.c:
        (mount_added):
        (mount_removed):
	Emit signals outside of the lock to avoid
	deadlocks (#519250)

2008-02-28  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_start_node_cb):
	Fix the content-type of directories (inode/directory, not
	x-directory/normal as in gnome-vfs)
	Set file icons from the content-type

	* daemon/gvfsbackendobexftp.c (_change_directory):
	Add a FIXME, trying to change to a non-existant directory
	errors out with "permission denied", which isn't the case

	(_query_file_info_helper): set the right content-type and icon
	for the root folder

	(is_connected), (do_mount): Wait until we're connected to exit from
	do_mount()

	(do_open_for_read): Fix a crash when opening an inexistant file for
	read

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_error_set_from_response),
	(file_info_query), (do_query_info):
	Set sane error messages for ftp error codes.
	Also remove some excessive debug messages.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	fix typo (thanks Andre)

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_sendv),
	(ftp_connection_send), (do_start_write), (do_create), (do_append),
	(do_replace), (g_vfs_backend_ftp_class_init):
	implement append

2008-02-28  Benjamin Otte  <otte@gnome.org>
