@@ -1,5 +1,11 @@
 2008-02-28  Benjamin Otte  <otte@gnome.org>
 
+	* daemon/gvfsbackendftp.c: (ftp_connection_create),
+	(ftp_connection_login), (ftp_connection_use), (ftp_connection_new):
+	split out login code, so we can try multiple auths when some fail.
+
+2008-02-28  Benjamin Otte  <otte@gnome.org>
+
 	* daemon/gvfsdaemonutils.c: (gvfs_file_info_populate_default),
 	(gvfs_file_info_populate_names),
 	(gvfs_file_info_populate_content_types):
